completed finding best value fo k portion of assignment

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -955,13 +955,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Answer the following question: What is the best value for k?\n",
     "**Question:** What is the best value for `k`?\n",
     "\n",
-    "**Answer:** # YOUR ANSWER HERE!"
+    "**Answer:** 4 seems to be the best value for k"
    ]
   },
   {
@@ -997,7 +998,7 @@
    "outputs": [],
    "source": [
     "# Initialize the K-Means model using the best value for k\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE! "
    ]
   },
   {
