commented through first section of assignment

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -790,10 +790,12 @@
     "# looping to compute inertia with each possible value of k\n",
     "for i in k_values:\n",
     "    # Creating the model for each iterative cluster value\n",
+    "    # setting the random statue to 1\n",
     "    k_means_model = KMeans(n_clusters=i, random_state=1)\n",
     "    # train/fit the model to the data using the data frame\n",
     "    k_means_model.fit(df_market_data_scaled)\n",
     "    # append the model to the initially empty list\n",
+    "    # computing inertia via the inertia_ attribute of KMeans method\n",
     "    inertia.append(k_means_model.inertia_)"
    ]
   },
@@ -873,7 +875,10 @@
    ],
    "source": [
     "# Create a dictionary with the data to plot the Elbow curve\n",
-    "elbow_data = {\"k\": k_values, \"inertia\": inertia}\n",
+    "elbow_data = {\n",
+    "    \"k\": k_values, \n",
+    "    \"inertia\": inertia\n",
+    "}\n",
     "\n",
     "# Create a DataFrame with the data to plot the Elbow curve\n",
     "df_elbow = pd.DataFrame(elbow_data)\n",
@@ -998,7 +1003,7 @@
    "outputs": [],
    "source": [
     "# Initialize the K-Means model using the best value for k\n",
-    "# YOUR CODE HERE! "
+    "model = KMeans(n_clusters=4, random_state=1)"
    ]
   },
   {
