added explanation to k choice

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -967,7 +967,7 @@
     "#### Answer the following question: What is the best value for k?\n",
     "**Question:** What is the best value for `k`?\n",
     "\n",
-    "**Answer:** 4 seems to be the best value for k"
+    "**Answer:** 4 seems to be the best value for k. This is somewhat subjective, but the best point is where the curve flattens out like an elbow."
    ]
   },
   {
