fit the k-means model to the scaled data

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -998,22 +998,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the K-Means model using the best value for k\n",
-    "model = KMeans(n_clusters=4, random_state=1)"
+    "KMeans_model = KMeans(n_clusters=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(n_clusters=4)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fit the K-Means model using the scaled data\n",
-    "# YOUR CODE HERE!"
+    "KMeans_model.fit(df_market_data_scaled)"
    ]
   },
   {
