--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1029,15 +1029,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 1 0 0 0 0 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 2 0 1 1 3\n",
+      " 1 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict the clusters to group the cryptocurrencies using the scaled data\n",
-    "# YOUR CODE HERE!\n",
+    "coin_segments = KMeans_model.predict(df_market_data_scaled)\n",
     "\n",
     "# View the resulting array of cluster values.\n",
-    "# YOUR CODE HERE!"
+    "print(coin_segments)"
    ]
   },
   {
