--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1051,25 +1051,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a copy of the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "df_market_data_predictions = df_market_data_scaled.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_change_percentage_24h</th>\n",
+       "      <th>price_change_percentage_7d</th>\n",
+       "      <th>price_change_percentage_14d</th>\n",
+       "      <th>price_change_percentage_30d</th>\n",
+       "      <th>price_change_percentage_60d</th>\n",
+       "      <th>price_change_percentage_200d</th>\n",
+       "      <th>price_change_percentage_1y</th>\n",
+       "      <th>Coin Segment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coin_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bitcoin</th>\n",
+       "      <td>0.508529</td>\n",
+       "      <td>0.493193</td>\n",
+       "      <td>0.772200</td>\n",
+       "      <td>0.235460</td>\n",
+       "      <td>-0.067495</td>\n",
+       "      <td>-0.355953</td>\n",
+       "      <td>-0.251637</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethereum</th>\n",
+       "      <td>0.185446</td>\n",
+       "      <td>0.934445</td>\n",
+       "      <td>0.558692</td>\n",
+       "      <td>-0.054341</td>\n",
+       "      <td>-0.273483</td>\n",
+       "      <td>-0.115759</td>\n",
+       "      <td>-0.199352</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tether</th>\n",
+       "      <td>0.021774</td>\n",
+       "      <td>-0.706337</td>\n",
+       "      <td>-0.021680</td>\n",
+       "      <td>-0.061030</td>\n",
+       "      <td>0.008005</td>\n",
+       "      <td>-0.550247</td>\n",
+       "      <td>-0.282061</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ripple</th>\n",
+       "      <td>-0.040764</td>\n",
+       "      <td>-0.810928</td>\n",
+       "      <td>0.249458</td>\n",
+       "      <td>-0.050388</td>\n",
+       "      <td>-0.373164</td>\n",
+       "      <td>-0.458259</td>\n",
+       "      <td>-0.295546</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash</th>\n",
+       "      <td>1.193036</td>\n",
+       "      <td>2.000959</td>\n",
+       "      <td>1.760610</td>\n",
+       "      <td>0.545842</td>\n",
+       "      <td>-0.291203</td>\n",
+       "      <td>-0.499848</td>\n",
+       "      <td>-0.270317</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>binancecoin</th>\n",
+       "      <td>0.891871</td>\n",
+       "      <td>1.327295</td>\n",
+       "      <td>0.800214</td>\n",
+       "      <td>-0.057148</td>\n",
+       "      <td>0.778653</td>\n",
+       "      <td>-0.188232</td>\n",
+       "      <td>-0.225533</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chainlink</th>\n",
+       "      <td>0.011397</td>\n",
+       "      <td>2.572251</td>\n",
+       "      <td>1.101647</td>\n",
+       "      <td>-0.490495</td>\n",
+       "      <td>-0.931954</td>\n",
+       "      <td>0.387759</td>\n",
+       "      <td>-0.018284</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cardano</th>\n",
+       "      <td>0.102530</td>\n",
+       "      <td>1.508001</td>\n",
+       "      <td>0.648885</td>\n",
+       "      <td>0.328959</td>\n",
+       "      <td>-0.486349</td>\n",
+       "      <td>0.065080</td>\n",
+       "      <td>-0.155428</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>litecoin</th>\n",
+       "      <td>0.077497</td>\n",
+       "      <td>0.334297</td>\n",
+       "      <td>0.858520</td>\n",
+       "      <td>-0.012646</td>\n",
+       "      <td>-0.366477</td>\n",
+       "      <td>-0.486266</td>\n",
+       "      <td>-0.292351</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash-sv</th>\n",
+       "      <td>0.448952</td>\n",
+       "      <td>-0.190684</td>\n",
+       "      <td>-0.248043</td>\n",
+       "      <td>0.051634</td>\n",
+       "      <td>-0.529666</td>\n",
+       "      <td>-0.532961</td>\n",
+       "      <td>-0.206029</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 price_change_percentage_24h  price_change_percentage_7d  \\\n",
+       "coin_id                                                                    \n",
+       "bitcoin                             0.508529                    0.493193   \n",
+       "ethereum                            0.185446                    0.934445   \n",
+       "tether                              0.021774                   -0.706337   \n",
+       "ripple                             -0.040764                   -0.810928   \n",
+       "bitcoin-cash                        1.193036                    2.000959   \n",
+       "binancecoin                         0.891871                    1.327295   \n",
+       "chainlink                           0.011397                    2.572251   \n",
+       "cardano                             0.102530                    1.508001   \n",
+       "litecoin                            0.077497                    0.334297   \n",
+       "bitcoin-cash-sv                     0.448952                   -0.190684   \n",
+       "\n",
+       "                 price_change_percentage_14d  price_change_percentage_30d  \\\n",
+       "coin_id                                                                     \n",
+       "bitcoin                             0.772200                     0.235460   \n",
+       "ethereum                            0.558692                    -0.054341   \n",
+       "tether                             -0.021680                    -0.061030   \n",
+       "ripple                              0.249458                    -0.050388   \n",
+       "bitcoin-cash                        1.760610                     0.545842   \n",
+       "binancecoin                         0.800214                    -0.057148   \n",
+       "chainlink                           1.101647                    -0.490495   \n",
+       "cardano                             0.648885                     0.328959   \n",
+       "litecoin                            0.858520                    -0.012646   \n",
+       "bitcoin-cash-sv                    -0.248043                     0.051634   \n",
+       "\n",
+       "                 price_change_percentage_60d  price_change_percentage_200d  \\\n",
+       "coin_id                                                                      \n",
+       "bitcoin                            -0.067495                     -0.355953   \n",
+       "ethereum                           -0.273483                     -0.115759   \n",
+       "tether                              0.008005                     -0.550247   \n",
+       "ripple                             -0.373164                     -0.458259   \n",
+       "bitcoin-cash                       -0.291203                     -0.499848   \n",
+       "binancecoin                         0.778653                     -0.188232   \n",
+       "chainlink                          -0.931954                      0.387759   \n",
+       "cardano                            -0.486349                      0.065080   \n",
+       "litecoin                           -0.366477                     -0.486266   \n",
+       "bitcoin-cash-sv                    -0.529666                     -0.532961   \n",
+       "\n",
+       "                 price_change_percentage_1y  Coin Segment  \n",
+       "coin_id                                                    \n",
+       "bitcoin                           -0.251637             0  \n",
+       "ethereum                          -0.199352             0  \n",
+       "tether                            -0.282061             1  \n",
+       "ripple                            -0.295546             1  \n",
+       "bitcoin-cash                      -0.270317             0  \n",
+       "binancecoin                       -0.225533             0  \n",
+       "chainlink                         -0.018284             0  \n",
+       "cardano                           -0.155428             0  \n",
+       "litecoin                          -0.292351             0  \n",
+       "bitcoin-cash-sv                   -0.206029             1  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add a new column to the DataFrame with the predicted clusters\n",
-    "# YOUR CODE HERE!\n",
+    "df_market_data_predictions[\"Coin Segment\"] = coin_segments\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE!"
+    "df_market_data_predictions.head(10)"
    ]
   },
   {
