calculated the explained variance ratios

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1425,16 +1425,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3719856 , 0.34700813, 0.17603793])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "89.50316570309842"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Retrieve the explained variance to determine how much information \n",
     "# can be attributed to each principal component.\n",
-    "# YOUR CODE HERE!"
+    "\n",
+    "# using the explained variance ration to calculate the variances of the 3 clusters\n",
+    "pca_array = pca.explained_variance_ratio_\n",
+    "display(pca_array)\n",
+    "\n",
+    "# suming the values of the PCA array to find total explained variance\n",
+    "sum = pca_array.sum() * 100\n",
+    "display(sum)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1442,7 +1469,7 @@
     "\n",
     "**Question:** What is the total explained variance of the three principal components?\n",
     "\n",
-    "**Answer:** # YOUR ANSWER HERE!"
+    "**Answer:** The total explained variance is 89% of the three principal components"
    ]
   },
   {
