--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1767,18 +1767,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Answer the following questions: What is the best value for k when using the PCA data? Does it differ from the best k value found using the original data?\n",
     "* **Question:** What is the best value for `k` when using the PCA data?\n",
     "\n",
-    "  * **Answer:** # YOUR ANSWER HERE!\n",
+    "  * **Answer:** 4 seems to be the best value for k. This is somewhat subjective, but the best point is where the curve flattens out like an elbow.\n",
     "\n",
     "\n",
     "* **Question:** Does it differ from the best k value found using the original data?\n",
     "\n",
-    "  * **Answer:** # YOUR ANSWER HERE!"
+    "  * **Answer:** This is the same ideal value for k as seen in the original data"
    ]
   },
   {
